engines/ep/tests/module_tests/checkpoint_test.h
@@ -133,6 +133,9 @@ public:
      *  contains a meta-item after checkpoint_start
      */
     void testRegisterCursorInCheckpointEmptyByExpel(bool extraMetaItem);
+
+    void testRegisterCursorCheckpointEmptyByExpelMultipleCheckpoints(
+            uint64_t startSeqno);
 };
 
 /**
